[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "cython==3.0.0",
    "oldest-supported-numpy",
    "setuptools>=45.0",
    "wheel>=0.37.0",
]

[tool.pytest.ini_options]
testpaths = 'tests'
junit_family= "legacy"
filterwarnings = [
    # bogus numpy ABI warning (see numpy/#432)
    "ignore:.*numpy.dtype size changed.*:RuntimeWarning",
    "ignore:.*numpy.ufunc size changed.*:RuntimeWarning",
    "ignore:.*Distutils was imported before Setuptools*",
]

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
skip = "pp* *musllinux*"  # disable PyPy and musl-based wheels
test-requires = "matplotlib pytest scipy"
test-command = "pytest {project}/tests -vx"

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
archs = ["x86_64", "universal2"]
test-skip = ["*_arm64", "*_universal2:arm64"]

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,*.mypy_cache/*,./docker/mapdl/*,./_unused/*,*.cdb'
ignore-words = "doc/ignore-words.txt"
quiet-level = 3