[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.12.0", "nanobind >=1.3.2"]

[project]
authors = [
  {name = "Alex Kaszynski", email = "akascap@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "pyvista>=0.41.1"
]
description = "Pythonic interface to MAPDL archive files."
name = "mapdl_archive"
readme = "README.rst"
requires-python = ">=3.10"
version = "0.2.10"

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
Repository = "https://github.com/akaszynski/mapdl-archive"

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
before-build = "pip install abi3audit"
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*musllinux*"
test-command = "pytest {project}/tests -vv"
test-extras = ["tests"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.cibuildwheel.macos]
archs = ["native"]
environment = {MACOSX_DEPLOYMENT_TARGET = "10.14"}  # Needed for full C++17 support on MacOS
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.codespell]
ignore-words-list = "POIN,parm"
quiet-level = 3
skip = '*.cxx,*.h,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,*.cpp,*.c,*.dat,*.cdb'

[tool.mypy]
plugins = ['npt_promote']
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
testpaths = 'tests'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.scikit-build]
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
sdist.exclude = [".github", "*.png", "tests", ".mypy_cache", ".pre-commit-config.yaml", "*_cache", "CONTRIBUTING.md", ".gitignore"]
sdist.include = ["*.cpp"]
wheel.py-api = "cp312"
